--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-data/Utuado-Lista_092617.csv
-data/Pronce-Lista_09262017.csv
-notebooks/.ipynb_checkpoints/
+/data/Utuado-Lista_092617.csv
+/data/Pronce-Lista_09262017.csv
+/notebooks/.ipynb_checkpoints/
